Fix nav being under content on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
 }
 
 .navbar {
+    z-index: 2;
+    position: relative;
     width: 100%;
     display: flex;
     align-items: center;
